refactor(#366): replace project access target DSL